fix: nav-item alignment on videos page

--- a/Pages/Videos/style.css
+++ b/Pages/Videos/style.css
@@ -2,168 +2,166 @@
 
 /* resets */
 
-	
-
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+  box-sizing: border-box;
 }
 
 :root {
-    --primary-text-color: #183b56;
-    --secondary-text-color: #577592;
-    --accent-color: #2294ed;
-    --accent-color-dark: #1d69a3;
-    --padding-inline-section: 20px;
+  --primary-text-color: #183b56;
+  --secondary-text-color: #577592;
+  --accent-color: #2294ed;
+  --accent-color-dark: #1d69a3;
+  --padding-inline-section: 20px;
 }
 
-html{
-    scroll-behavior: smooth;
+html {
+  scroll-behavior: smooth;
 }
-  
-::-webkit-scrollbar{
-    width: 12px;
+
+::-webkit-scrollbar {
+  width: 12px;
 }
-  
-::-webkit-scrollbar-track{
-    border-radius: 5px;
-    box-shadow: inset 0 0 10px rgba(0,0,0,0.25);
+
+::-webkit-scrollbar-track {
+  border-radius: 5px;
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.25);
 }
-  
-::-webkit-scrollbar-thumb{
-    border-radius: 5px;
-    background: linear-gradient(to top, #2294ed , #1d69a3);
+
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background: linear-gradient(to top, #2294ed, #1d69a3);
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
-    color: var(--primary-text-color);
-    overflow-x: hidden;
+  font-family: 'Poppins', sans-serif;
+  color: var(--primary-text-color);
+  overflow-x: hidden;
 }
 
 h1 {
-    font-size: 3rem;
+  font-size: 3rem;
 }
 
 h2 {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 h3 {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
 
 p {
-    font-family: 'Roboto', sans-serif;
-    font-size: 1.25rem;
-    color: var(--secondary-text-color);
-    line-height: 1.8rem;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.25rem;
+  color: var(--secondary-text-color);
+  line-height: 1.8rem;
 }
 
 a {
-    text-decoration: none;
-    display: inline-block;
+  text-decoration: none;
+  display: inline-block;
 }
 
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 /* utility classes */
 
 .small-bold-text {
-    font-size: 1rem;
-    font-weight: 700;
+  font-size: 1rem;
+  font-weight: 700;
 }
 
 .container {
-    max-width: 1180px;
-    margin-inline: auto;
-    padding-inline: var(--padding-inline-section);
-    overflow: hidden;
+  max-width: 1180px;
+  margin-inline: auto;
+  padding-inline: var(--padding-inline-section);
+  overflow: hidden;
 }
 
 .flex {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .hover-link {
-    color: var(--primary-text-color);
-    transition: 0.2s ease-out;
+  color: var(--primary-text-color);
+  transition: 0.2s ease-out;
 }
 
 .hover-link:hover {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 .primary-button {
-    background-color: var(--accent-color);
-    border-radius: 6px;
-    font-weight: 700;
-    color: white !important;
-    padding: 12px 24px;
-    box-shadow: 0 0 2px var(--secondary-text-color);
-    transition: 0.2s ease-out;
-    text-align: center;
+  background-color: var(--accent-color);
+  border-radius: 6px;
+  font-weight: 700;
+  color: white !important;
+  padding: 12px 24px;
+  box-shadow: 0 0 2px var(--secondary-text-color);
+  transition: 0.2s ease-out;
+  text-align: center;
 }
 
 .primary-button:hover {
-    background-color: var(--accent-color-dark);
+  background-color: var(--accent-color-dark);
 }
 
 .secondary-button {
-    border: 0.5px solid var(--secondary-text-color);
-    border-radius: 6px;
-    font-weight: 700;
-    color: var(--primary-text-color) !important;
-    padding: 12px 24px;
-    transition: 0.2s ease-out;
+  border: 0.5px solid var(--secondary-text-color);
+  border-radius: 6px;
+  font-weight: 700;
+  color: var(--primary-text-color) !important;
+  padding: 12px 24px;
+  transition: 0.2s ease-out;
 }
 
 .secondary-button:hover {
-    border-color: var(--accent-color);
-    color: var(--accent-color) !important;
+  border-color: var(--accent-color);
+  color: var(--accent-color) !important;
 }
 
 /* nav bar */
 
 .main-nav {
-    margin-top: 20px;
-    justify-content: space-between;
+  margin-top: 20px;
+  justify-content: space-between;
 }
 
 .company-logo img {
-    width: 200px;
+  width: 200px;
 }
 
 .nav-links {
-    flex-basis: 730px;
+  flex-basis: 790px;
 }
 
-.nav-menu{
+.nav-menu {
   display: flex;
   align-items: center;
 }
 
 .nav-links ul {
-    justify-content: end;
-    gap: 40px;
+  justify-content: end;
+  gap: 35px;
 }
 
 .nav-toggle {
-    display: none;
+  display: none;
 }
 
-.hamburger{
+.hamburger {
   display: none;
   cursor: pointer;
 }
 
-.bar{
+.bar {
   display: block;
   width: 25px;
   height: 3px;
@@ -174,97 +172,94 @@ ul {
 }
 
 /* header section */
-.header h1{
+.header h1 {
   text-align: center;
   margin-top: 4vh;
 }
 
-.header img{
-    display: block;
-    margin: 0 auto;
-    width: 40vw;
-    margin-top: 7vh
-  }
+.header img {
+  display: block;
+  margin: 0 auto;
+  width: 40vw;
+  margin-top: 7vh;
+}
 
 /*Cards */
 
 @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
 
-
 .cards {
-	font-family: 'Muli', sans-serif;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	min-height: 100vh;
-	margin: 0;
+  font-family: 'Muli', sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
 }
 
 .course {
-	background-color: #EEEFFF;
-	border-radius: 10px;
-	box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
-	display: flex;
-	max-width: 100%;
-	margin: 20px;
-	overflow: hidden;
-	width:70vw;
+  background-color: #eeefff;
+  border-radius: 10px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+  display: flex;
+  max-width: 100%;
+  margin: 20px;
+  overflow: hidden;
+  width: 70vw;
 }
 
 .course h6 {
-	opacity: 0.6;
-	margin: 0;
-	letter-spacing: 1px;
-	text-transform: uppercase;
+  opacity: 0.6;
+  margin: 0;
+  letter-spacing: 1px;
+  text-transform: uppercase;
 }
 
 .course h2 {
-	letter-spacing: 1px;
-	margin: 10px 0;
+  letter-spacing: 1px;
+  margin: 10px 0;
 }
 
 .course-preview {
-	background-color: #2A265F;
-	color: #fff;
-	padding: 30px;
-	width: 25vw;
+  background-color: #2a265f;
+  color: #fff;
+  padding: 30px;
+  width: 25vw;
 }
 
 .course-info {
-	padding: 30px;
-	position: relative;
-	width: 100%;
+  padding: 30px;
+  position: relative;
+  width: 100%;
 }
 
 .card-btn {
-	background-color: #2A265F;
-	border: 0;
-	border-radius: 50px;
-	box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
-	color: #fff;
-	font-size: 16px;
-	padding: 12px 25px;
-	position: absolute;
-	bottom: 5vh;
-	right: 2vw;
-	letter-spacing: 1px;
-    cursor: pointer;
-    transition: all 0.2s;
+  background-color: #2a265f;
+  border: 0;
+  border-radius: 50px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+  color: #fff;
+  font-size: 16px;
+  padding: 12px 25px;
+  position: absolute;
+  bottom: 5vh;
+  right: 2vw;
+  letter-spacing: 1px;
+  cursor: pointer;
+  transition: all 0.2s;
 }
 
 .card-btn:hover {
-  background-color: #868FEE;
-	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  background-color: #868fee;
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
   color: black;
-
 }
-
 
 /* footer */
 
-footer{
-  
+footer {
   bottom: 0;
   left: 0;
   right: 0;
@@ -276,7 +271,7 @@ footer{
   margin-top: 5vh;
 }
 
-.footer-content{
+.footer-content {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -284,14 +279,14 @@ footer{
   text-align: center;
 }
 
-.footer-logo{
+.footer-logo {
   font-size: 2.1rem;
   font-weight: 500;
   text-transform: capitalize;
   line-height: 3rem;
 }
 
-.footer-content p{
+.footer-content p {
   max-width: 500px;
   margin: 10px auto;
   line-height: 28px;
